<resources>
    <string name="app_name">Exercicioaula5</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="pink">Pink</string>
    <string name="windows">Activate Windows</string>
    <string name="violet">Violet</string>
    <string name="rowone">Row One</string>
    <string name="rowtwo">Row Two</string>
    <string name="rowthree">Row three</string>
    <string name="rowfour">Row Four</string>

</resources>